    * NOTE: Stickies can have tags added to them on a per project basis if more fine-grained labeling is required
  * Sticky edit page now contains:
    * Group description if the sticky is part of a group
    * Comments that may have been added to sticky
  * Stickies on the sticky list page can now be filtered by:
    * Project
    * Assigned To
    * Due Date
    * Status
  * Using Rails 3.2.0.rc1 and Contour 0.8.0
  * Calendar updated have consistent look across browsers and operating systems

* Refactoring
  * qTip2 is now provided by Contour 0.8.0

== 0.13.0

* Enhancements
  * Calendar Improvements
    * Double clicking on calendar allows creation of a sticky or a sticky group
    * Today's Date and Mouse Hover colors have been lightened
  * Sticky Groups
    * Deleting a grouped sticky now prompts the user to delete:
      * a single sticky
      * all following
      * or all stickies in the group
    * Grouped stickies can now be moved to a different project by editing the group
  * Navigation
    * Creating, Updating, and Deleting stickies from the calendar has been improved
    * Viewing a project now adds a menu item to that project's templates and frames
  * Sticky Tags:
    * Project specific tags can be assigned to stickies
  * Email layout has improved:
    * Daily Stickies Due are now grouped by project
    * Sticky Completion emails now list additional stickies in the group
    * Due Date, Tags, and Group information added across sticky emails
  * Templates can now have negative due date offsets

* Bug Fix
  * Daily stickies due email fixed to include weekday for items past due
  * Creating a sticky that's already marked as completed now only sends out a "sticky completion" email
  * Validation errors when creating or updating stickies now correctly remember the project, frame, and tag selections

== 0.12.1

* Bug Fix
  * Project Viewers are now correctly redirected to the sticky show page from the calendar view

== 0.12.0

* Enhancements