@@ -30,11 +30,12 @@ class Template < ActiveRecord::Base
                       owner_id: item_hash[:owner_id]
                     } unless item_hash[:description].blank?
     end
+    self.items.sort!{|a,b| a[:interval].send(a[:units]) <=> b[:interval].send(b[:units])}
   end
   
   def generate_stickies!(current_user, frame_id, initial_date = Date.today, additional_text = nil)
     group = current_user.groups.create({ project_id: self.project_id, description: additional_text, template_id: self.id })
-    self.items.each_with_index do |item|
+    self.sorted_items.each_with_index do |item|
       item = item.symbolize_keys
       current_user.stickies.create({ group_id: group.id, project_id: self.project_id, frame_id: frame_id, owner_id: item[:owner_id], description: item[:description].to_s, completed: false, due_date: (initial_date == nil ? nil : initial_date + item[:interval].send(item[:units])) })
     end
@@ -46,5 +47,9 @@ class Template < ActiveRecord::Base
     end
     
     group
+  end
+  
+  def sorted_items
+    self.items.sort{|a,b| a[:interval].send(a[:units]) <=> b[:interval].send(b[:units])}
   end
 end
